--- a/program/python/04.tensorflow/04.深层神经网络DNN/4.4神经网络进一步优化/4.4.2过拟合问题.md
+++ b/program/python/04.tensorflow/04.深层神经网络DNN/4.4神经网络进一步优化/4.4.2过拟合问题.md
@@ -33,7 +33,40 @@ loss = tf.reduce_mean(tf.square(y_ - y)) + tf.contrib.layers.l2_regularizer(lamb
 
 ![L1&L2正则化](L1&L2正则化.png)
 
-## 4. 集合计算5层神经网络带L2正则化的损失函数
+## 4. add_to_collection
+
+1. tf.add_to_collection函数可以将资源加入一个或多个集合中
+2. 然后通过tf.get_collection获取一个集合里面的所有资源
+
+```py
+sess=tf.InteractiveSession()
+#初始化2个Variable
+v1=tf.Variable(tf.constant(1))
+v2=tf.Variable(tf.constant(1))
+#设置保存到collection的name为collection
+name='collection'
+#把v1和v2添加到默认graph的collection中
+tf.add_to_collection(name,v1)
+tf.add_to_collection(name,v2)
+#获得名为name的集合
+c1 = tf.get_collection(name)
+tf.global_variables_initializer().run()
+print("the first collection: %s"%sess.run(c1))
+#修改v1和v2的值,必须使用eval()或run()进行执行
+tf.assign(v1,tf.constant(3)).eval()
+tf.assign(v2,tf.constant(4)).eval()
+#再次查看collection中的值
+c2 = tf.get_collection(name)
+print("the second collection: %s"%sess.run(c2))
+print("the sum of collection: %s"%sess.run(tf.add_n(c2))
+#resut:
+#the first collection: [1, 1]
+#the second collection: [3, 4]
+#the sum of collection: 7
+```
+
+
+## 5. 集合计算5层神经网络带L2正则化的损失函数
 
 ```py
 import tensorflow as tf
@@ -70,3 +103,7 @@ mse_loss = tf.reduce_sum(tf.pow(y_ - y, 2)) / dataset_size
 tf.add_to_collection('losses', mse_loss)
 loss = tf.add_n(tf.get_collection('losses'))
 ```
+
+## 参考
+
+1. [tensorflow：3.1)add_to_collection和L2正则化](https://blog.csdn.net/jiangpeng59/article/details/72852184)
