--- a/program/python/04.tensorflow/05.MNIST数字识别问题/5.2神经网络模型训练及不同模型结果对比/5.2.1TensorFlow训练神经网络.md
+++ b/program/python/04.tensorflow/05.MNIST数字识别问题/5.2神经网络模型训练及不同模型结果对比/5.2.1TensorFlow训练神经网络.md
@@ -3,6 +3,12 @@
 ## 1. 代码
 
 1. https://github.com/reymont/TensorFlow_learning_notes (fork)
+2. 优化方法
+    1. `激活函数`实现神经网络模型的去线性化
+    2. 使用一个或多个`隐含层`使得神经网络的结构更深，以解决复杂问题
+    3. `带指数衰减`的学习率设置
+    4. 使用`正则化`来避免过度拟合
+    5. `滑动平均模型`来使得最终模型更加健壮
 
 ```py
 import tensorflow as tf
@@ -33,6 +39,7 @@ def inference(input_tensor, avg_class, weights1, biases1, weights2, biases2):
         return tf.matmul(layer1, avg_class.average(weights2)) + avg_class.average(biases2)  
 
 def train(mnist):
+    # None　代表图片数量未知，input = tf.placeholder(tf.float32,[None,784])
     x = tf.placeholder(tf.float32, [None, INPUT_NODE], name='x-input')
     y_ = tf.placeholder(tf.float32, [None, OUTPUT_NODE], name='y-input')
     # 生成隐藏层的参数。
@@ -112,6 +119,31 @@ if __name__=='__main__':
     main()
 ```
 
-## 2. 学习率和衰减率
+## 2. 将测试图片可视化的方式呈现
 
-参考 4.4神经网络进一步优化
+```py
+from tensorflow.examples.tutorials.mnist import input_data
+import matplotlib.pyplot as plt
+
+mnist = input_data.read_data_sets("MNIST_data", one_hot=True)
+
+print(mnist.train.images.shape)
+print(mnist.train.labels.shape)
+
+#获取第二张图片
+image = mnist.train.images[1,:]
+#将图像数据还原成28*28的分辨率
+image = image.reshape(28,28)
+#打印对应的标签
+print(mnist.train.labels[1])
+
+plt.figure()
+plt.imshow(image)
+plt.show()
+```
+
+## 参考
+
+1. 参考 4.4神经网络进一步优化
+2. [写给初学者的深度学习教程之 MNIST 数字识别](https://blog.csdn.net/briblue/article/details/80398369)
+3. [TensorFlow入门之MNIST样例代码分析](https://www.cnblogs.com/yinzm/p/7110870.html)
