--- a/program/python/04.tensorflow/04.深层神经网络DNN/4.1深度学习与深层神经网络/4.1.2激活函数实现去线性化.md
+++ b/program/python/04.tensorflow/04.深层神经网络DNN/4.1深度学习与深层神经网络/4.1.2激活函数实现去线性化.md
@@ -20,6 +20,27 @@
     1. a = tf.nn.relu(tf.matmul(x, w1) + biases1)
     2. y = tf.nn.relu(tf.matmul(a, w2) + biases2)
 
+```py
+import tensorflowas tf
+# 声明变量。
+w1 = tf.Variable(tf.random_normal([2, 3], stddev=1, seed=1))
+b1 = tf.Variable(tf.constant(0.0, shape=[3]))
+w2 = tf.Variable(tf.random_normal([3, 1], stddev=1, seed=1))
+b2 = tf.Variable(tf.constant(0.0, shape=[1]))
+# 暂时将输入的特征向量定义为一个常量。这里x是一个1*2的矩阵。
+x = tf.constant([[0.7, 0.9]])
+# 实现神经网络的前向传播过程，并计算神经网络的输出。
+a = tf.nn.relu(tf.matmul(x, w1)+b1)
+y = tf.nn.relu(tf.matmul(a, w2)+b2)
+sess= tf.Session()
+# 运行变量初始化过程。
+init_op= tf.global_variables_initializer()
+sess.run(init_op)
+# 输出[[3.95757794]]
+print(sess.run(y))
+sess.close()
+```
+
 ## 4. 什么是bias？
 
 * 偏置单元（bias unit），也称为偏置项（bias term）或者截距项（intercept term）
@@ -32,3 +53,4 @@
 1. [常用激活函数（激励函数）理解与总结](https://blog.csdn.net/tyhj_sf/article/details/79932893)
 2. [浅谈神经网络中的bias](https://www.cnblogs.com/shuaishuaidefeizhu/p/6832541.html)
 3. [神经网络（Representation）](https://blog.csdn.net/walilk/article/details/50278697)
+4. [如何实现前向传播过程](https://blog.csdn.net/tcict/article/details/77643619)
