--- a/program/python/04.tensorflow/05.MNIST数字识别问题/5.2神经网络模型训练及不同模型结果对比/5.2.1TensorFlow训练神经网络.md
+++ b/program/python/04.tensorflow/05.MNIST数字识别问题/5.2神经网络模型训练及不同模型结果对比/5.2.1TensorFlow训练神经网络.md
@@ -49,7 +49,7 @@ def train(mnist):
     weights2 = tf.Variable(tf.truncated_normal([LAYER1_NODE, OUTPUT_NODE], stddev=0.1))
     biases2 = tf.Variable(tf.constant(0.1, shape=[OUTPUT_NODE]))
 
-    # 计算不含滑动平均类的前向传播结果
+    # 计算在当前参数下神经网络，不含滑动平均类的前向传播结果
     y = inference(x, None, weights1, biases1, weights2, biases2)
     
     # 定义训练轮数及相关的滑动平均类 
@@ -142,8 +142,28 @@ plt.imshow(image)
 plt.show()
 ```
 
+## 3. tf.argmax的使用
+
+tf.argmax(vector, 1)：返回的是vector中的最大值的索引号，如果vector是一个向量，那就返回一个值，如果是一个矩阵，那就返回一个向量，这个向量的每一个维度都是相对应矩阵行的最大值元素的索引号。
+
+```py
+import tensorflow as tf
+import numpy as np
+ 
+A = [[1,3,4,5,6]]
+B = [[1,3,4], [2,4,1]]
+ 
+with tf.Session() as sess:
+    print(sess.run(tf.argmax(A, 1)))
+    print(sess.run(tf.argmax(B, 1)))
+# 输出：
+# [4]
+# [2 1]
+```
+
 ## 参考
 
 1. 参考 4.4神经网络进一步优化
 2. [写给初学者的深度学习教程之 MNIST 数字识别](https://blog.csdn.net/briblue/article/details/80398369)
 3. [TensorFlow入门之MNIST样例代码分析](https://www.cnblogs.com/yinzm/p/7110870.html)
+4. [tf.argmax的使用](https://blog.csdn.net/uestc_c2_403/article/details/72232807)
