--- a/program/kubernetes/10.开发指南/python/3.list-pods.md
+++ b/program/kubernetes/10.开发指南/python/3.list-pods.md
@@ -9,9 +9,17 @@ v1 = client.CoreV1Api()
 print("Listing pods with their IPs:")
 ret = v1.list_pod_for_all_namespaces(watch=False)
 for i in ret.items:
-    print("%s\t%s\t%s" % (i.status.pod_ip, i.metadata.namespace, i.metadata.name))
+    print("%s\t%s\t%s\t%s\t%s" % (i.status.pod_ip,i.status.phase,i.status.message, i.metadata.namespace, i.metadata.name))
+ret = v1.list_namespaced_pod("test04",watch=False)
+for i in ret.items:
+    print("%s\t%s\t%s\t%s\t%s" % (i.status.pod_ip,i.status.phase,i.status.message, i.metadata.namespace, i.metadata.name))
 ```
 
-##
+## 参考
 
 1. https://github.com/kubernetes-client/python/blob/master/README.md
+2. https://github.com/kubernetes-client/python/blob/master/kubernetes/docs/CoreV1Api.md#list_pod_for_all_namespaces
+3. https://github.com/kubernetes-client/python/blob/master/kubernetes/docs/CoreV1Api.md#list_namespaced_pod
+4. https://github.com/kubernetes-client/python/blob/master/kubernetes/docs/V1PodList.md
+5. https://github.com/kubernetes-client/python/blob/master/kubernetes/docs/V1Pod.md
+6. https://github.com/kubernetes-client/python/blob/master/kubernetes/docs/V1PodStatus.md
