--- a/program/kubernetes/10.开发指南/python/3.list-pods.md
+++ b/program/kubernetes/10.开发指南/python/3.list-pods.md
@@ -12,7 +12,7 @@ for i in ret.items:
     print("%s\t%s\t%s\t%s\t%s" % (i.status.pod_ip,i.status.phase,i.status.message, i.metadata.namespace, i.metadata.name))
 ret = v1.list_namespaced_pod("test04",watch=False)
 for i in ret.items:
-    print("%s\t%s\t%s\t%s\t%s" % (i.status.pod_ip,i.status.phase,i.status.message, i.metadata.namespace, i.metadata.name))
+    print("%s\t%s\t%s\t%s\t%s\t%s" % (i.status.pod_ip,i.status.phase,i.status.message, i.metadata.namespace, i.metadata.name, i.spec.containers[0].image))
 ```
 
 ## 参考
