--- a/program/python/00.核心/string/2.Python字符串操作.md
+++ b/program/python/00.核心/string/2.Python字符串操作.md
@@ -1,6 +1,6 @@
 https://www.cnblogs.com/zhongbin/p/3273048.html
 
-Python 如何判断一个字符串只包含数字字符
+##  1. Python 如何判断一个字符串只包含数字字符
 Q:如何判断一个字符串只包含数字字符
 
 A:一种方法是 a.isdigit()。但这种方法对于包含正负号的数字字符串无效，因此更为准确的为：
@@ -12,7 +12,7 @@ A:一种方法是 a.isdigit()。但这种方法对于包含正负号的数字字
         ... do something else ...
 这样更准确一些，适用性也更广。但如果你已经确信没有正负号，使用字符串的isdigit()方法则更为方便。
 
-Python 字符串比较
+## 2. Python 字符串比较
  
 Python 字符串简单比较
 简单比较是用内置函数 cmp() 来比较两个字符串:
@@ -29,7 +29,7 @@ Type "help", "copyright", "credits" or "license" for more information.
 -1
 >>>
 
-## Python字符串比较忽略大小写
+## 3. Python字符串比较忽略大小写 upper() && lower()
  
 正则表达式，使用IGNORECASE标志
 
@@ -48,7 +48,7 @@ True
 2
 
 
-## python 字符串高级比较
+## 4. python 字符串高级比较
 使用python库difflib可以实现两个字符串的比较，找到相同的部分
 
 Python difflib|SequenceMatcher|Differ|HtmlDiff 使用方法
