--- a/program/python/04.tensorflow/08.循环神经网络RNN/8.1循环神经网络简介RNN/8.1循环神经网络简介RNN.md
+++ b/program/python/04.tensorflow/08.循环神经网络RNN/8.1循环神经网络简介RNN/8.1循环神经网络简介RNN.md
@@ -14,7 +14,9 @@
 * 循环神经网络在每一个时刻会有一个输入Xt，然后根据循环神经网络当前的状态At提供一个输出Ht，而循环神经网络当前的状态At是根据上一时刻状态At-1和当前的输入Xt共同决定的。
 * 循环神经网络要求每一个时刻都有一个输入，但是不一定每个时刻都需要有输出
 
-## 4. 以机器翻译为例来介绍循环神经网络是如何解决实际问题的
+## 4. RNN的结构
+
+1. 如果一个函数的输入均值为零，输出均值也为0。就称为具有零偏特性。比如tanh(x)
 
 ## 5. 循环体
 
