--- a/program/python/04.tensorflow/08.循环神经网络RNN/8.2长短时记忆网络(LSTM)结构/8.2长短时记忆网络(LSTM)结构.md
+++ b/program/python/04.tensorflow/08.循环神经网络RNN/8.2长短时记忆网络(LSTM)结构/8.2长短时记忆网络(LSTM)结构.md
@@ -1,14 +1,18 @@
 
 ### 1. 长短时记忆网络 long short term memory
 
-* 长短时记忆网络
+1. 长短时记忆网络
     1. 长期依赖 long-term dependencies
     2. 有用信息的间隔有大有小、长短不一，循环神经网络的性能会受到限制
     3. 与单一 tanh 循环体结构不同，LSTM是一种拥有三个“门”结构的特殊网络结构
-* 门结构
+2. 门结构
     1. 使用 sigmoid 神经网络和一个按位做乘法的操作。包括“遗忘门”，“输出门”，“输入门”
     2. 使用 sigmoid 作为激活函数的全连接神经网络层会输出一个 0 到 1 之间的数值，描述当前输入有多少信息量可以通过这个结构
     3. 0表示“不让任何成分通过”，而1表示“让所有成分通过！”
+3. 在h的基础上增加一个c
+    1. h 短时记忆
+    2. c 长时记忆
+
 
 ### 2. sigmoid函数
 
