--- a/monitor/Pinpoint/hbase/2.HBase 常用Shell命令.md
+++ b/monitor/Pinpoint/hbase/2.HBase 常用Shell命令.md
@@ -2,6 +2,7 @@ HBase 常用Shell命令 - 残雪余香 - 博客园 http://www.cnblogs.com/nexiyi
 
 ```sh
 ### 进入hbase shell console
+/opt/hbase/hbase-1.2.6/bin/hbase shell
 $HBASE_HOME/bin/hbase shell
 ### 如果有kerberos认证，需要事先使用相应的keytab进行一下认证（使用kinit命令），认证成功之后再使用hbase shell进入可以使用whoami命令可查看当前用户
 hbase(main)> whoami
