--- a/program/python/04.tensorflow/04.深层神经网络DNN/4.2损失数定义/4.2.1经典损失函数.md
+++ b/program/python/04.tensorflow/04.深层神经网络DNN/4.2损失数定义/4.2.1经典损失函数.md
@@ -15,10 +15,56 @@
 
 ## 3. Softmax
 
-* softmax
+![softmax.png](softmax.png)
+
+1. softmax
     1. Softmax回归将神经网络前向传播得到的结果变成概率分布
     2. 原始神经网络的输出被用作置信度来生成新的输出
     3. 交叉熵函数不是对称的：H(p,q)≠H(q,p)，刻画的是通过概率分布q来表达概率分布p的困难程度
+2. tf.nn.softmax()：softmax计算
+```py
+# -*- coding: utf-8 -*-
+import tensorflow as tf
+A = [1.0,2.0,3.0,4.0,5.0,6.0]
+with tf.Session() as sess:
+    print (sess.run(tf.nn.softmax(A)))
+# [ 0.00426978  0.01160646  0.03154963  0.08576079  0.23312201  0.63369131]
+# 其中所有输出的和为1.
+### 等价于以下numpy实现
+import numpy as np
+aa = np.array([0.1,0.2,0.3])
+c = np.exp(aa) / np.sum(np.exp(aa), 0)
+print(c)
+# [ 0.30060961  0.33222499  0.3671654 ]
+```
+3. 多类别softmax with交叉熵
+    1. tf.nn.softmax_cross_entropy_with_logits && softmax_cross_entropy_with_logits_v2
+    2. tensorflow将交叉熵和softmax回归统一封装
+    3. cross_entropy = tf.nn.softmax_cross_entropy_with_logits(y, y_)
+        1. y_代表标准答案，y代表输出结果
+    4. softmax_cross_entropy_with_logits_v2: softmax + 多类别cross-entropy 
+```py
+a  = tf.constant([[0.1, 0.2, 0.3]],dtype=tf.float32)
+label = tf.constant([[0, 0, 1]],dtype=tf.float32)
+b = tf.nn.softmax_cross_entropy_with_logits_v2(logits=a, labels=label)
+
+with tf.Session() as sess:
+    print(sess.run(b)) # [ 1.00194287]
+    print(sess.run(tf.reduce_sum(b))) # 1.00194
+### 等价于以下numpy实现: softmax(predictions) + cross_entropy
+import numpy as np
+def softmax(logits):
+    return np.exp(logits)/np.sum(np.exp(logits))
+
+def cross_entropy(label, prediction_softmax):
+    result = np.sum(-1*np.log(prediction_softmax)*label)
+    return result
+
+prediction = np.array([[0.1, 0.2, 0.3]], dtype=np.float32)
+label = np.array([[0, 0, 1]],dtype=np.float32)
+c = cross_entropy(label, softmax(prediction))
+print(c) # 1.00194
+```
 
 ## 4. 三分类问题
 
@@ -39,13 +85,6 @@
     5. 通过上面3个运算，完成交叉熵`p(x)logq(x)`的计算
     6. 结果是n*m的二维矩阵，n为一个batch中样例的数量，m为分类的类别数量
 
-## 6. tf.nn.softmax_cross_entropy_with_logits函数
-
-* tf.nn.softmax_cross_entropy_with_logits函数
-    1. tensorflow将交叉熵和softmax回归统一封装
-    2. cross_entropy = tf.nn.softmax_cross_entropy_with_logits(y, y_)
-        1. y_代表标准答案，y代表输出结果
-
 ## 7. 回归问题
 
 * 回归问题
@@ -56,3 +95,6 @@
     1. 均方误差MSE, mean squared error
     2. mse = tf.reduce_mean(tf.square(y_ - y))
 
+## 参考
+
+1. [softmax](https://blog.csdn.net/caomin1hao/article/details/80587327)
