--- a/program/python/04.tensorflow/08.循环神经网络RNN/8.1循环神经网络简介RNN/8.1.0循环神经网络简介RNN.md
+++ b/program/python/04.tensorflow/08.循环神经网络RNN/8.1循环神经网络简介RNN/8.1.0循环神经网络简介RNN.md
@@ -62,6 +62,29 @@ for i in range(len(X)):
     print "output: ", final_output
 ```
 
+### 7.1 np.dot
+
+![np.dot.png](np.dot.png)
+
+```py
+import numpy
+a = numpy.array([[1,2],
+                 [3,4]])
+b = numpy.array([[5,6],
+                 [7,8]])
+a*b
+# >>>array([[ 5, 12],
+#           [21, 32]])
+a.dot(b)
+# >>>array([[19, 22],
+#           [43, 50]])
+numpy.dot(a,b)
+# >>>array([[19, 22],
+#           [43, 50]])
+numpy.dot(b,a)
+# >>>array([[23, 34],
+#           [31, 46]])
+```
 
 ## 8. 序列过长
 
@@ -160,3 +183,5 @@ with tf.Session() as sess:
 1. [static_rnn使用详解](https://blog.csdn.net/u013230189/article/details/82804316)
 2. [tensorflow tf.stack tf.unstack 实例](https://blog.csdn.net/guotong1988/article/details/73913520)
 3. [tf.unstack讲解](https://blog.csdn.net/qq_32806793/article/details/85223906)
+4. [numpy中矩阵乘法，星乘(*)和点乘(.dot)的区别](https://blog.csdn.net/like4501/article/details/79753346)
+5. [使用Tensorflow实现简单的RNN](https://www.jianshu.com/p/b38760250281)
