--- a/program/python/04.tensorflow/04.深层神经网络DNN/4.2损失数定义/4.2.1经典损失函数.md
+++ b/program/python/04.tensorflow/04.深层神经网络DNN/4.2损失数定义/4.2.1经典损失函数.md
@@ -77,6 +77,8 @@ print(c) # 1.00194
 
 ## 3. TensorFlow 实现交叉熵 cross_entropy
 
+![交叉熵.png](交叉熵.png)
+
 1. 三分类问题
     1. 正确答案(1,0,0)，预测答案(0.5,0.4,0.1)
         1. 交叉熵：H((1,0,0),(0.5,0.4,0.1))=-(1*log0.5 + 0*log0.4 + 0*log0.1)≈0.3
