--- a/program/python/04.tensorflow/04.深层神经网络DNN/4.1深度学习与深层神经网络/4.1.3异或门实现.md
+++ b/program/python/04.tensorflow/04.深层神经网络DNN/4.1深度学习与深层神经网络/4.1.3异或门实现.md
@@ -24,7 +24,7 @@ def nn(x, weights, bias):
     return d2
 #预测值
 pred = nn(x, weights, bias)
-#损失函数
+#损失函数，4.2.1经典损失函数，线性回归最常用的耗费函数就是MSE均方误差，回归问题
 cost = tf.reduce_mean(tf.square(y - pred))
 #学习率
 learning_rate = 0.01
