--- a/program/python/04.tensorflow/04.深层神经网络DNN/4.1深度学习与深层神经网络/4.1.2激活函数实现去线性化.md
+++ b/program/python/04.tensorflow/04.深层神经网络DNN/4.1深度学习与深层神经网络/4.1.2激活函数实现去线性化.md
@@ -14,7 +14,7 @@
 
 ## 3. 常见的非线性激活函数
 
-1. 常见的非线性激活函数
+1. TensorFlow提供了7种不同的非线性激活函数，常见的非线性激活函数
     1. tf.nn.relu
     2. tf.sigmoid
     3. tf.tanh
