--- a/aliyun/02.大数据acp/0.阿里云大数据专业认证.md
+++ b/aliyun/02.大数据acp/0.阿里云大数据专业认证.md
@@ -1,4 +1,6 @@
 1. https://help.aliyun.com/document_detail/32421.html
+2. 知途网-阿里云ACP大数据专业认证在线培训系列课程_阿里云ACP认证 
+    http://www.chinamoocs.com/portal/aliauth/76.mooc
 
 
 
