--- a/program/python/04.tensorflow/04.深层神经网络DNN/4.4神经网络进一步优化/4.4.3滑动平均模型.md
+++ b/program/python/04.tensorflow/04.深层神经网络DNN/4.4神经网络进一步优化/4.4.3滑动平均模型.md
@@ -1,6 +1,8 @@
 
 ## 1. ExponentialMovingAverage
 
+![图4-15.ExponentialMovingAverage.png](图4-15.ExponentialMovingAverage.png)
+
 1. ExponentialMovingAverage
     1. tf.train.ExponentialMovingAverage实现滑动平均模型
     2. 对每一个变量会维护一个影子变量 shadow variable
@@ -29,23 +31,21 @@ with tf.Session() as sess:
     # 2. 每次更新完以后，影子变量的值更新
     # 3. 变量的值为指定的值，如果不指定则使用上一次计算的结果
 
-    # 衰减率min{0.99, (1+step)/(10+step)=0.1} = 0.1，
-    # varible指定值为5
-    # 影子变量为0, 更新为 0.1*0 + 0.9*5 = 4.5
+    # 衰减率 decay=0.99, step=0, 运算后 decay = min{0.99, (1+step)/(10+step)=0.1} = min{0.99, 1/10} = 0.1，
+    # varible指定值为5, 影子变量 shadow_variable=0, 运算后 shadow_variable = 0.1*0 + 0.9*5 = 4.5
     sess.run(tf.assign(v1, 5))              # 更新v1的值
     sess.run(maintain_averages_op)          # 更新v1的滑动平均值
     print(sess.run([v1, ema.average(v1)]))  # 更新v1的滑动平均值, 输出[5.0, 4.5]
     
-    # 衰减率min{0.99, (1+step)/(10+step)=0.999} = 0.99
-    # varible指定为10
-    # 影子变量为4.5，更新为 0.99*4.5 + 0.01*10 = 4.555
+    # 衰减率 decay=0.99, step=10000, 运算后 decay = min{0.99, (1+10000)/(10+10000)=0.999} = 0.99
+    # varible=10, 影子变量 shadow_variable=4.5，运算后 shadow_variable = 0.99*4.5 + 0.01*10 = 4.555
     sess.run(tf.assign(step, 10000))        # 更新迭代轮转数step
     sess.run(tf.assign(v1, 10))
     sess.run(maintain_averages_op)
     print(sess.run([v1, ema.average(v1)]))  # 再次更新滑动平均值, 输出[10.0, 4.5549998]
     
-    # varible不指定新值为10
-    # 影子变量更新为4.555，更新为 0.99*4.555 + 0.01*10 = 4.60945
+    # 不指定变量的值，衰减率为上一次的值 decay=0.99
+    # varible=10, 影子变量 shadow_variable=4.555，运算后 shadow_variable = 0.99*4.555 + 0.01*10 = 4.60945
     sess.run(maintain_averages_op)
     print(sess.run([v1, ema.average(v1)]))  # 输出[10.0, 4.6094499]
 ```
