--- a/program/python/04.tensorflow/04.深层神经网络DNN/4.4神经网络进一步优化/4.4.3滑动平均模型.md
+++ b/program/python/04.tensorflow/04.深层神经网络DNN/4.4神经网络进一步优化/4.4.3滑动平均模型.md
@@ -3,11 +3,12 @@
 
 ![图4-15.ExponentialMovingAverage.png](图4-15.ExponentialMovingAverage.png)
 
-1. ExponentialMovingAverage
-    1. tf.train.ExponentialMovingAverage实现滑动平均模型
-    2. 对每一个变量会维护一个影子变量 shadow variable
-    3. shadow_variable = decay * shadow_variable + (1 - decay) * variable
-    4. 在一定程度提高最终模型在测试数据上的表现
+1. TensorFlow提供tf.train.ExponentialMovingAverage来实现滑动平均模型
+    1. shadow_variable = decay * shadow_variable + (1 - decay) * variable
+    2. shadow_variable为影子变量
+    3. variable为待更新的变量
+    4. decay为衰减率，decay决定了模型更新的速度，decay越大模型越趋于稳定
+    5. 为了加快前期的训练，提供num_updates参数动态设置decay大小
 
 ## 2. 代码
 
