--- a/program/python/04.tensorflow/02.tensorflow基础/2.常用函数/07.tf.reduce_mean().md
+++ b/program/python/04.tensorflow/02.tensorflow基础/2.常用函数/07.tf.reduce_mean().md
@@ -28,7 +28,7 @@ x = tf.constant([[1., 1.],
                  [2., 2.]])
 tf.reduce_mean(x)               # 1.5；axis无值，对所有元素求平均值
 m1 = tf.reduce_mean(x, axis=0)  # [1.5, 1.5]；指定axis=0，表示沿着‘跨行’的方向求平均
-m2 = tf.reduce_mean(x, 1)       # [1.,  2.]
+m2 = tf.reduce_mean(x, 1)       # [1.,  2.]；指定axis=1，表示沿着‘跨列’的方向求平均
 
 xx = tf.constant([[[1., 1, 1],
                    [2., 2, 2]],
