--- a/program/python/04.tensorflow/06.图像识别与卷积神经网络CNN/6.2卷积神经网络简介/01.卷积神经网络CNN.md
+++ b/program/python/04.tensorflow/06.图像识别与卷积神经网络CNN/6.2卷积神经网络简介/01.卷积神经网络CNN.md
@@ -49,6 +49,8 @@
         8. 设移动的步长为1：从左到右扫描，每次移动 1 格，扫描完之后，再向下移动一格，再次从左到右扫描
         9. ![图05.移动过程.gif](图05.移动过程.gif)
         10. 可看出 卷积层的神经元是只与前一层的部分神经元节点相连，每一条相连的线对应一个权重 w 。
+        11. ![图06.感受视野计算下一层神经元的值.png](图06.感受视野计算下一层神经元的值.png)
+        12. 对下一层的所有神经元来说，它们从不同的位置去探测了上一层神经元的特征。
     2. shared weights（共享权值）
     3. 卷积核
         1. 一个感受视野带有一个卷积核，我们将 感受视野 中的权重 w 矩阵称为 卷积核 ；
@@ -58,34 +60,21 @@
         5. 卷积核的大小由用户来定义，即定义的感受视野的大小；
         6. 卷积核的权重矩阵的值，便是卷积神经网络的参数，
         7. 为了有一个偏移项 ，卷积核可附带一个偏移项 b ，它们的初值可以随机来生成，可通过训练进行变化。
-
-因此 感受视野 扫描时可以计算出下一层神经元的值为：
-
-b+∑i=04∑j=04wijxij
-b+∑i=04∑j=04wijxij
-对下一层的所有神经元来说，它们从不同的位置去探测了上一层神经元的特征。
-
-## 2.3 feature map (特征映射图)
-
-我们将通过 一个带有卷积核的感受视野 扫描生成的下一层神经元矩阵 称为 一个feature map (特征映射图)，如下图的右边便是一个 feature map：
-
-
-
-因此在同一个 feature map 上的神经元使用的卷积核是相同的，因此这些神经元 shared weights，共享卷积核中的权值和附带的偏移。一个 feature map 对应 一个卷积核，若我们使用 3 个不同的卷积核，可以输出3个feature map：（感受视野：5×5，布长stride：1）
-
-
-
-因此在CNN的卷积层，我们需要训练的参数大大地减少到了 (5×5+1)×3=78(5×5+1)×3=78个。
-
-假设输入的是 28×2828×28 的RGB图片，即输入的是一个 3×28×283×28×28 的的二维神经元，这时卷积核的大小不只用长和宽来表示，还有深度，感受视野也对应的有了深度，如下图所示：
-
-
-
-由图可知：感受视野： 3×2×23×2×2 ； 卷积核： 3×2×23×2×2 ，深度为3；下一层的神经元的值为：b+∑2d=0∑1i=0∑1j=0wdijxdijb+∑d=02∑i=01∑j=01wdijxdij . 卷积核的深度和感受视野的深度相同，都由输入数据来决定，长宽可由自己来设定，数目也可以由自己来设定，一个卷积核依然对应一个 feature map 。
-
-注：“stride=1stride=1”表示在长和宽上的移动间隔都为1，即 stridewidth=1stridewidth=1 且 strideheight=1strideheight=1
-
-## 2.4 激励层：
+    4. feature map (特征映射图)
+        1. 一个带有卷积核的感受视野 扫描生成的下一层神经元矩阵 称为 一个feature map (特征映射图)
+        2. ![图07.feature-map.png](图07.feature-map.png)
+        3. 在同一个 feature map 上的神经元使用的卷积核是相同的，
+        4. 这些神经元 shared weights，共享卷积核中的权值和附带的偏移。
+        5. 一个 feature map 对应 一个卷积核，若我们使用 3 个不同的卷积核，可以输出3个feature map：（感受视野：5×5，步长stride：1）
+        6. 因此在CNN的卷积层，我们需要训练的参数大大地减少到了 (5×5+1)×3=78个。
+        7. ![图08.3个不同卷积核的feature-map.png](图08.3个不同卷积核的feature-map.png)
+        8. 假设输入的是 28×28 的RGB图片，即输入的是一个 3×28×28 的的二维神经元，这时卷积核的大小不只用长和宽来表示，还有深度，感受视野也对应的有了深度
+        9. ![图09.RGB图片的卷积核.png](图09.RGB图片的卷积核.png)
+        10. 由图可知：感受视野： 3×2×2；卷积核：3×2×2，深度为3；
+        11. 卷积核的深度和感受视野的深度相同，都由输入数据来决定，长宽可由自己来设定，数目也可以由自己来设定
+        12. 一个卷积核依然对应一个 feature map 。
+        13. “stride=1”表示在长和宽上的移动间隔都为1
+    5. 激励层：
 激励层主要对卷积层的输出进行一个非线性映射，因为卷积层的计算还是一种线性计算。使用的激励函数一般为ReLu函数：
 f(x)=max(x,0)
 f(x)=max(x,0)
