--- a/program/docker/04.容器/1.修改docker的port端口映射.md
+++ b/program/docker/04.容器/1.修改docker的port端口映射.md
@@ -1,4 +1,4 @@
-修改docker的port端口映射 - CSDN博客 https://blog.csdn.net/ijijni/article/details/81939523
+
 
 1. 查看需要修改的容器，记住container id
 docker ps -a
@@ -54,3 +54,46 @@ vi hostconfig.json
 service docker restart
 5.启动容器
 docker start xxx
+
+
+## 2. 方法二
+
+I'm also interested in this problem.
+
+As @Thasmo mentioned, port forwardings can be specified ONLY with docker run command.
+Other commands, docker start does not have -p option and docker port only displays current forwardings.
+
+To add port forwardings, I always follow these steps,
+
+stop running container
+
+docker stop test01
+commit the container
+
+docker commit test01 test02
+NOTE: The above, test02 is a new image that I'm constructing from the test01 container.
+
+re-run from the commited image
+
+docker run -p 8080:8080 -td test02
+Where the first 8080 is the local port and the second 8080 is the container port.
+
+## 3. 方法三
+
+You can change the port mapping by directly editing the hostconfig.json file at /var/lib/docker/containers/[hash_of_the_container]/hostconfig.json
+
+You can determine the [hash_of_the_container] via the docker inspect <container_name> command and the value of the "Id" field is the hash.
+
+1) stop the container 
+2) change the file
+3) restart your docker engine (to flush/clear config caches)
+4) start the container
+So you don't need to create an image with this approach. You can also change the restart flag here.
+
+P.S. You may visit https://docs.docker.com/engine/admin/ to learn how to correctly restart your docker engine as per your host machine. I used sudo systemctl restart docker to restart my docker engine that is running on Ubuntu 16.04
+
+
+## 参考
+
+1. https://stackoverflow.com/questions/19335444/how-do-i-assign-a-port-mapping-to-an-existing-docker-container
+2. [修改docker的port端口映射](https://blog.csdn.net/ijijni/article/details/81939523)
