--- a/program/hadoop/12.hbase/02.入门/2.1.创建表并建立连接/01.创建表并建立连接.md
+++ b/program/hadoop/12.hbase/02.入门/2.1.创建表并建立连接/01.创建表并建立连接.md
@@ -28,30 +28,101 @@ list
 ### 2. describe查看表的所有默认参数
 describe 'users'
 ```
-## 3. java client
+
+## 4. 创建mvn项目
+
+mvn archetype:generate -DgroupId=com.cmi -DartifactId=HelloHBase \
+  -DarchetypeArtifactId=maven-archetype-quickstart -DinteractiveMode=false
+
+
+## 5. 配置pom.xml文件
+```xml
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+
+    <groupId>hcg</groupId>
+    <artifactId>hcg</artifactId>
+    <version>1.0-SNAPSHOT</version>
+
+    <properties>
+        <hbase.version>2.1.2</hbase.version>
+    </properties>
+
+    <dependencies>
+        <!-- HBase -->
+        <dependency>
+            <groupId>org.apache.hbase</groupId>
+            <artifactId>hbase-client</artifactId>
+            <version>${hbase.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.hbase</groupId>
+            <artifactId>hbase-common</artifactId>
+            <version>${hbase.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.hbase</groupId>
+            <artifactId>hbase-server</artifactId>
+            <version>${hbase.version}</version>
+        </dependency>
+
+    </dependencies>
+
+</project>
+```
+
+## 6. 本地配置hosts
+
+C:\Windows\System32\drivers\etc\hosts
+
+```conf
+192.168.0.243 hbae
+```
+
+## 7. 在hbase新建测试表
+
+
+```sh
+hbase shell
+### 1. 创建有一个列族的表mytable
+create 'mytable', 'cf'
+### 2. 写数据
+# 在mytable表的first行中cf:message列对应的数据单元中插入字节数组hello HBase
+put 'mytable', 'first', 'cf:message', 'hello HBase'
+put 'mytable', 'second', 'cf:foo', 0x0
+put 'mytable', 'third', 'cf:bar', 3.14159
+```
+
+## 8. java client 列举表
 
 ```java
 import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.hbase.HBaseConfiguration;
 import org.apache.hadoop.hbase.HTableDescriptor;
 import org.apache.hadoop.hbase.client.Admin;
+import org.apache.hadoop.hbase.client.Connection;
 import org.apache.hadoop.hbase.client.ConnectionFactory;
- 
+import org.apache.hadoop.hbase.client.HBaseAdmin;
+
 import java.io.IOException;
- 
-public class HBaseConnection {
- 
+
+public class HBaseTest {
     public static void main(String[] args) throws IOException {
-        //第一步，设置HBsae配置信息
-        Configuration configuration = HBaseConfiguration.create();    
-        //注意。这里这行目前没有注释掉的，这行和问题3有关系  是要根据自己zookeeper.znode.parent的配置信息进行修改。
-       configuration.set("zookeeper.znode.parent","/hbase-unsecure"); //与 hbase-site-xml里面的配置信息 zookeeper.znode.parent 一致  
-        configuration.set("hbase.zookeeper.quorum","192.168.8.30");  //hbase 服务地址
-        configuration.set("hbase.zookeeper.property.clientPort","2181"); //端口号
-        //这里使用的是接口Admin   该接口有一个实现类HBaseAdmin   也可以直接使用这个实现类
-        // HBaseAdmin baseAdmin = new HBaseAdmin(configuration);
-        Admin admin = ConnectionFactory.createConnection(configuration).getAdmin();
-        if(admin !=){
+        Configuration config = HBaseConfiguration.create();
+        config.set("hbase.zookeeper.quorum","192.168.0.243");  //hbase 服务地址
+        config.set("hbase.zookeeper.property.clientPort","12181"); //端口号
+
+        HBaseAdmin.available(config);
+
+        Connection connection = ConnectionFactory.createConnection(config);
+        Admin admin = connection.getAdmin();
+        //Admin admin = ConnectionFactory.createConnection(configuration).getAdmin();
+        if(admin != null){
             try {
                 //获取到数据库所有表信息
                 HTableDescriptor[] allTable = admin.listTables();
@@ -66,8 +137,57 @@ public class HBaseConnection {
 }
 
 ```
+## 9. 创建表
 
+```java
+import org.apache.hadoop.conf.Configuration;
+import org.apache.hadoop.hbase.HBaseConfiguration;
+import org.apache.hadoop.hbase.HColumnDescriptor;
+import org.apache.hadoop.hbase.HTableDescriptor;
+import org.apache.hadoop.hbase.TableName;
+import org.apache.hadoop.hbase.client.Admin;
+import org.apache.hadoop.hbase.client.ConnectionFactory;
+
+import java.io.IOException;
+
+public class CreateTable {
+    public static void main(String[] args) throws IOException {
+        Configuration config = HBaseConfiguration.create();
+        config.set("hbase.zookeeper.quorum","192.168.0.243");  //hbase 服务地址
+        config.set("hbase.zookeeper.property.clientPort","12181"); //端口号
+
+
+        TableName tableName = TableName.valueOf("test-table");
+
+        Admin admin = ConnectionFactory.createConnection(config).getAdmin();
+        if(admin != null){
+            try {
+                if (admin.tableExists(tableName)) {// 如果存在要创建的表，那么先删除，再创建 
+                    admin.disableTable(tableName);
+                    admin.deleteTable(tableName);
+                    System.out.println(tableName + " is exist,detele....");
+                }
+                HTableDescriptor tableDescriptor = new HTableDescriptor(tableName);
+                tableDescriptor.addFamily(new HColumnDescriptor("column1"));
+                tableDescriptor.addFamily(new HColumnDescriptor("column2"));
+                tableDescriptor.addFamily(new HColumnDescriptor("column3"));
+                admin.createTable(tableDescriptor);
+
+                if (admin.tableExists(tableName)) {// 如果存在要创建的表，那么先删除，再创建
+                    System.out.println(tableName + " is created");
+                }
+            }catch (IOException e) {
+                e.printStackTrace();
+            }
+        }
+    }
+}
+```
 
 ## 参考
 
 1. [JAVA 远程连接HBase数据库所遇到的坑](https://blog.csdn.net/ycf921244819/article/details/81706119)
+2. https://github.com/JasonBabylon/hbase-operations-with-java.git
+3. https://www.cnblogs.com/zhenjing/p/hbase_example.html
+4. https://github.com/reymont/HelloHBase.git
+    1. C:\workspace\java\hbase\HelloHBase
