--- a/program/python/04.tensorflow/06.图像识别与卷积神经网络CNN/6.2卷积神经网络简介/01.卷积神经网络CNN.md
+++ b/program/python/04.tensorflow/06.图像识别与卷积神经网络CNN/6.2卷积神经网络简介/01.卷积神经网络CNN.md
@@ -75,35 +75,25 @@
         12. 一个卷积核依然对应一个 feature map 。
         13. “stride=1”表示在长和宽上的移动间隔都为1
     5. 激励层：
-激励层主要对卷积层的输出进行一个非线性映射，因为卷积层的计算还是一种线性计算。使用的激励函数一般为ReLu函数：
-f(x)=max(x,0)
-f(x)=max(x,0)
-
-卷积层和激励层通常合并在一起称为“卷积层”。
-
-## 2.5 池化层：
-当输入经过卷积层时，若感受视野比较小，布长stride比较小，得到的feature map （特征图）还是比较大，可以通过池化层来对每一个 feature map 进行降维操作，输出的深度还是不变的，依然为 feature map 的个数。
-
-池化层也有一个“池化视野（filter）”来对feature map矩阵进行扫描，对“池化视野”中的矩阵值进行计算，一般有两种计算方式：
-
-Max pooling：取“池化视野”矩阵中的最大值
-Average pooling：取“池化视野”矩阵中的平均值
-扫描的过程中同样地会涉及的扫描布长stride，扫描方式同卷积层一样，先从左到右扫描，结束则向下移动布长大小，再从左到右。如下图示例所示：
-
-
-
-其中“池化视野”filter： 2×22×2；布长stride：2。（注：“ 池化视野”为个人叫法）
-
-最后可将 3 个 24×2424×24 的 feature map 下采样得到 3 个 24×2424×24 的特征矩阵：
-
-
- 
-## 2.6 归一化层：
-
-### 2.6.1. Batch Normalization
-Batch Normalization（批量归一化）实现了在神经网络层的中间进行预处理的操作，即在上一层的输入归一化处理后再进入网络的下一层，这样可有效地防止“梯度弥散”，加速网络训练。
-
-Batch Normalization具体的算法如下图所示： 
+        1. 激励层主要对卷积层的输出进行一个非线性映射，因为卷积层的计算还是一种线性计算。
+        2. 使用的激励函数一般为ReLu函数
+        3. 卷积层和激励层通常合并在一起称为“卷积层”
+    6. 池化层：
+        1. 当输入经过卷积层时，若感受视野比较小，布长stride比较小，得到的feature map （特征图）还是比较大
+        2. 可以通过池化层来对每一个 feature map 进行降维操作，输出的深度还是不变的，依然为 feature map 的个数
+        3. 池化层也有一个“池化视野（filter）”来对feature map矩阵进行扫描，对“池化视野”中的矩阵值进行计算，一般有两种计算方式：
+            1. Max pooling：取“池化视野”矩阵中的最大值
+            2. Average pooling：取“池化视野”矩阵中的平均值
+        4. 扫描的过程中同样地会涉及的扫描布长stride，扫描方式同卷积层一样，先从左到右扫描，结束则向下移动布长大小，再从左到右
+        5. ![图10.池化层.png](图10.池化层.png)
+        6. 其中“池化视野”filter： 2×2；步长stride：2。（注：“ 池化视野”为个人叫法）
+        7. 最后可将 3 个 24×2424×24 的 feature map 下采样得到 3 个 24×2424×24 的特征矩阵：
+        8. ![图11.池化层转换.png](图11.池化层转换.png)
+    7. 归一化层：
+        1. Batch Normalization
+            1. Batch Normalization（批量归一化）实现了在神经网络层的中间进行预处理的操作，
+            2. 即在上一层的输入归一化处理后再进入网络的下一层，这样可有效地防止“梯度弥散”，加速网络训练。
+            3. Batch Normalization具体的算法如下图所示：![图12.Batch.Normalization具体的算法.png](图12.Batch.Normalization具体的算法.png)
 
 
 每次训练时，取 batch_size 大小的样本进行训练，在BN层中，将一个神经元看作一个特征，batch_size 个样本在某个特征维度会有 batch_size 个值，然后在每个神经元 xixi 维度上的进行这些样本的均值和方差，通过公式得到 xi∧xi∧，再通过参数 γγ 和 ββ 进行线性映射得到每个神经元对应的输出 yiyi 。在BN层中，可以看出每一个神经元维度上，都会有一个参数 γγ 和 ββ ，它们同权重ww一样可以通过训练进行优化。
